update api flow amount
