# api/internal/model/flow.go
@@ -5,8 +5,9 @@ import (
 )
 
 type Flow struct {
-	From   uuid.UUID
-	To     uuid.UUID
-	Amount int64
-	Tags   []uuid.UUID
+	From       uuid.UUID
+	To         uuid.UUID
+	FromAmount int64
+	ToAmount   int64
+	Tags       []uuid.UUID
 }
