# api/internal/swagger/openapi.yml
@@ -1017,7 +1017,10 @@ components:
         to:
           type: string
           format: uuid
-        amount:
+        from_amount:
+          type: integer
+          format: int64
+        to_amount:
           type: integer
           format: int64
         tags:
@@ -1029,12 +1032,14 @@ components:
       required:
         - from
         - to
-        - amount
+        - from_amount
+        - to_amount
         - tags
       example:
         from: 0afeb903-d823-44a7-b4ef-0017e72bad5d
         to: bde589b4-7550-45c4-a06d-dea931e24031
-        amount: 5000
+        from_amount: 5000
+        to_amount: 5000
         tags:
           - 9462e790-5796-4791-af0d-399720973378
     TransactionData:
@@ -1069,12 +1074,14 @@ components:
         flows:
           - from: 0afeb903-d823-44a7-b4ef-0017e72bad5d
             to: bde589b4-7550-45c4-a06d-dea931e24031
-            amount: 5000
+            from_amount: 5000
+            to_amount: 5000
             tags:
               - 76b7f51a-5d85-4bf0-b032-0e9853e79f9e
           - from: bde589b4-7550-45c4-a06d-dea931e24031
             to: cc57d6d9-fd04-4f91-9e5b-4e341780e4b7
-            amount: 25
+            from_amount: 25
+            to_amount: 25
             tags:
               - 9462e790-5796-4791-af0d-399720973378
     TransactionID:
